# refua-bench

./: README.md  pyproject.toml
benchmarks/: sample_baseline_run.json  sample_file_adapter_config.yaml  sample_predictions_candidate.json  sample_suite.yaml
src/refua_bench/: __init__.py  adapters.py  baseline_registry.py  cli.py  compare.py  gating.py  metrics.py  provenance.py  reporting.py  run_artifact.py  runner.py  schema.py
tests/: conftest.py  test_cli.py  test_compare.py  test_gating.py  test_metrics.py  test_package_version.py  test_run_artifact.py  test_runner.py  test_schema.py
